--- a/src/components/home.css
+++ b/src/components/home.css
@@ -42,6 +42,8 @@ nav {
 	margin: 20px;
 	display: flex;
 	justify-content: center;
+	transition: all 200ms ease-in;
+
 }
 
 nav label {
@@ -56,6 +58,8 @@ form {
 	padding-inline: 60px;
 	display: none;
 	flex-direction: column;
+	transition: all 200ms ease-in;
+
 }
 
 #SignInFormData {
@@ -77,7 +81,15 @@ button,
 	outline: none;
 	font-size: 16px;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
 }
+
+
+#playbox::-webkit-scrollbar {
+	display: none;
+  }
+  
 
 button {
 	background: #1ed760;
@@ -123,6 +135,7 @@ a {
 	overflow-y : scroll;
 	position: relative;
 	z-index: 1;
+	transition: all 200ms ease-in;
 }
 
 #nullmusic{
@@ -196,6 +209,10 @@ a {
 	cursor: pointer;
 }
 
+#downloadit{
+	transition: all 400ms ease-in;
+}
+
 #musictextbox{
 	width: 60%;
 	color: #797a7e;
@@ -228,9 +245,25 @@ a {
 	left:0px;
 	bottom: 0px;
 	background:linear-gradient(180deg ,rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.096),black);
+	border-radius: 10px;
+
 }
 
 #playboxwrapper{
 	position: relative;
 	z-index: 3;
 }
+
+@keyframes spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+.spinIt {
+	display: inline-block;
+	animation: spin 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite;
+  }
+  
